knowledge_base/knowledge/v15/capl/structured/Obsolete/setPortBits - Single Wire.md
# setPortBits - Single Wire

> Category: `Obsolete` | Type: `notes`

| Deprecated Function Replaced by setCanCabsMod. |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
| Note For transceiver: CANcab 5790 5790 opto |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Function Syntax | void setPortBits (byte Mode); |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Function | To enable the different CAN bus transceiver modes. For this function you have to take care that the channel number is the logical one which is used by CANalyzer / CANoe according to the assignment in CAN Driver Configuration. Further on, setting the mode explicitly for one channel is not possible, you always have to set the modes for both channels (which can be different modes of course). |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Parameters | 8 bit parameter with the following, single wire CANcab specific meaning: Bit 0 and 1 Linemode of CANcab on channel 1 Bit 2 and 3 Linemode of CANcab on channel 2 Bit 4 High priority for channel 1 Bit 5 High priority for channel 2 Bits 6 and 7 Reserved, must be set to "0" There are 4 different linemodes, coded as below: Channel 1/Channel 2 Bit 1/ Bit 3 Bit 0/ Bit 2 Sleep Mode 0 0 HighVoltage Mode 0 1 Fast Mode 1 0 Normal Mode 1 1 For normal data interchange the Normal-Mode with baud rates up to 40 kBaud is used. A Fast-Mode, which allows only a limited number of network nodes (e.g. for flash programming), with baud rates up to 100 kBaud is supported. The HighVoltage-Mode is used to send HighVoltage-WakeUp messages (12 V); in Sleep-Mode the transceiver is switched off. Additionally there is a High Priority flag to clear all transmit buffers. | Bit 0 and 1 | Linemode of CANcab on channel 1 | Bit 2 and 3 | Linemode of CANcab on channel 2 | Bit 4 | High priority for channel 1 | Bit 5 | High priority for channel 2 | Bits 6 and 7 | Reserved, must be set to "0" | Channel 1/Channel 2 | Bit 1/ Bit 3 | Bit 0/ Bit 2 | Sleep Mode | 0 | 0 | HighVoltage Mode | 0 | 1 | Fast Mode | 1 | 0 | Normal Mode | 1 | 1 |
| Bit 0 and 1 | Linemode of CANcab on channel 1 |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Bit 2 and 3 | Linemode of CANcab on channel 2 |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Bit 4 | High priority for channel 1 |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Bit 5 | High priority for channel 2 |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Bits 6 and 7 | Reserved, must be set to "0" |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Channel 1/Channel 2 | Bit 1/ Bit 3 | Bit 0/ Bit 2 |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Sleep Mode | 0 | 0 |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| HighVoltage Mode | 0 | 1 |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Fast Mode | 1 | 0 |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Normal Mode | 1 | 1 |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Return Values | — |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Availability | Up to Version | Restricted To | Measurement Setup | Simulation/Test Setup |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| — | • | • |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |
| Example Sending a HighVoltage-WakeUp message on logical CAN channel 1: variables {message 0x100 msg;}on start{msg.CAN = 1;msg.DLC = 0;}on key 'w' {// sets the transceiver of channel 1 in HighVoltage mode // and the transceiver of channel 2 in Normal mode.setPortBits(0x0D);// sends the message.output(msg); // After sending the Wakeup message the transceiver// of both channels will be set to Normal mode.setPortBits(0x0F);}on message *{output(this);} |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |  |

| Version 15© Vector Informatik GmbH |
|---|
